@@ -55,17 +55,11 @@
                     <height>20</height>
                 </size>
             </property>
-            <property name="maximumSize">
-                <size>
-                    <width>32767</width>
-                    <height>20</height>
-                </size>
-            </property>
             <property name="text">
                 <string></string>
             </property>
             <property name="toolTip" stdset="0">
-                <string>Presets</string>
+                <string>Capabilities</string>
             </property>
         </widget>
         <widget class="QLabel">
@@ -118,19 +112,6 @@
                     <width>20</width>
                     <height>20</height>
                 </size>
-            </property>
-            <property name="maximumSize">
-                <size>
-                    <width>32767</width>
-                    <height>32767</height>
-                </size>
-            </property>
-            <property name="paletteForegroundColor">
-                <color>
-                    <red>255</red>
-                    <green>255</green>
-                    <blue>255</blue>
-                </color>
             </property>
             <property name="text">
                 <string></string>
